chore: docs rebuild

--- a/docs/components/to-do-list.html
+++ b/docs/components/to-do-list.html
@@ -6,23 +6,28 @@
 		<link rel="icon" href="/svelte-to-do-app/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/input-text.svelte-f2a51341.css">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-list.svelte-c6d73453.css">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-0f6234d6.css">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-e7b231a7.js">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-91be1531.js">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-2009011f.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/input-text.svelte-49012f62.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-list.svelte-7cb2aac9.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-752637b1.js">
 	</head>
 	<body>
 		
 
 
-<input type="text" placeholder="Enter your task..." class="svelte-1q6uvc2">
+<div class="list svelte-1408lpi">
+
+	
+</div>
 
 
-		<script type="module" data-hydrate="m0o140">
+		<script type="module" data-hydrate="185d7fe">
 		import { start } from "/svelte-to-do-app/_app/start-e7b231a7.js";
 		start({
-			target: document.querySelector('[data-hydrate="m0o140"]').parentNode,
+			target: document.querySelector('[data-hydrate="185d7fe"]').parentNode,
 			paths: {"base":"/svelte-to-do-app","assets":"/svelte-to-do-app"},
 			session: {},
 			route: true,
@@ -33,7 +38,7 @@
 				error: null,
 				nodes: [
 					import("/svelte-to-do-app/_app/layout.svelte-2009011f.js"),
-						import("/svelte-to-do-app/_app/pages/components/input-text.svelte-49012f62.js")
+						import("/svelte-to-do-app/_app/pages/components/to-do-list.svelte-7cb2aac9.js")
 				],
 				params: {}
 			}
