chore: docs rebuild

--- a/docs/components/input-text.html
+++ b/docs/components/input-text.html
@@ -6,23 +6,23 @@
 		<link rel="icon" href="/svelte-to-do-app/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/input-text.svelte-f2a51341.css">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-e7b231a7.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-91be1531.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-2009011f.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/input-text.svelte-49012f62.js">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/input-text.svelte-18947e53.css">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-f8eab34f.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-663a98ee.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/input-text.svelte-40292a5d.js">
 	</head>
 	<body>
 		
 
 
-<input type="text" placeholder="Enter your task..." class="svelte-1q6uvc2">
+<input type="text" placeholder="Enter your task..." class="svelte-1q00yag">
 
 
-		<script type="module" data-hydrate="m0o140">
-		import { start } from "/svelte-to-do-app/_app/start-e7b231a7.js";
+		<script type="module" data-hydrate="x8q1mj">
+		import { start } from "/svelte-to-do-app/_app/start-f8eab34f.js";
 		start({
-			target: document.querySelector('[data-hydrate="m0o140"]').parentNode,
+			target: document.querySelector('[data-hydrate="x8q1mj"]').parentNode,
 			paths: {"base":"/svelte-to-do-app","assets":"/svelte-to-do-app"},
 			session: {},
 			route: true,
@@ -32,8 +32,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/svelte-to-do-app/_app/layout.svelte-2009011f.js"),
-						import("/svelte-to-do-app/_app/pages/components/input-text.svelte-49012f62.js")
+					import("/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js"),
+						import("/svelte-to-do-app/_app/pages/components/input-text.svelte-40292a5d.js")
 				],
 				params: {}
 			}
