--- a/docs/components/to-do-item.html
+++ b/docs/components/to-do-item.html
@@ -6,23 +6,26 @@
 		<link rel="icon" href="/svelte-to-do-app/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-0f6234d6.css">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-e7b231a7.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-91be1531.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-2009011f.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-752637b1.js">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-a2106bc2.css">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-f8eab34f.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-663a98ee.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-26326ee4.js">
 	</head>
 	<body>
 		
 
 
-<div class="item svelte-1lfsrei">No title</div>
+<div class="item svelte-1fh10ap"><p class="svelte-1fh10ap">No title</p>
+
+	<button class="svelte-1fh10ap">✕</button>
+</div>
 
 
-		<script type="module" data-hydrate="1cecjcx">
-		import { start } from "/svelte-to-do-app/_app/start-e7b231a7.js";
+		<script type="module" data-hydrate="8uxqr2">
+		import { start } from "/svelte-to-do-app/_app/start-f8eab34f.js";
 		start({
-			target: document.querySelector('[data-hydrate="1cecjcx"]').parentNode,
+			target: document.querySelector('[data-hydrate="8uxqr2"]').parentNode,
 			paths: {"base":"/svelte-to-do-app","assets":"/svelte-to-do-app"},
 			session: {},
 			route: true,
@@ -32,8 +35,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/svelte-to-do-app/_app/layout.svelte-2009011f.js"),
-						import("/svelte-to-do-app/_app/pages/components/to-do-item.svelte-752637b1.js")
+					import("/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js"),
+						import("/svelte-to-do-app/_app/pages/components/to-do-item.svelte-26326ee4.js")
 				],
 				params: {}
 			}
