--- a/docs/components/to-do-list.html
+++ b/docs/components/to-do-list.html
@@ -6,28 +6,28 @@
 		<link rel="icon" href="/svelte-to-do-app/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-list.svelte-c6d73453.css">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-0f6234d6.css">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-e7b231a7.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-91be1531.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-2009011f.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-list.svelte-7cb2aac9.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-752637b1.js">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-list.svelte-8d1a742a.css">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-a2106bc2.css">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-f8eab34f.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-663a98ee.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-list.svelte-f632d091.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-26326ee4.js">
 	</head>
 	<body>
 		
 
 
-<div class="list svelte-1408lpi">
+<div class="list svelte-1wc3g3s">
 
 	
 </div>
 
 
-		<script type="module" data-hydrate="185d7fe">
-		import { start } from "/svelte-to-do-app/_app/start-e7b231a7.js";
+		<script type="module" data-hydrate="pygb4j">
+		import { start } from "/svelte-to-do-app/_app/start-f8eab34f.js";
 		start({
-			target: document.querySelector('[data-hydrate="185d7fe"]').parentNode,
+			target: document.querySelector('[data-hydrate="pygb4j"]').parentNode,
 			paths: {"base":"/svelte-to-do-app","assets":"/svelte-to-do-app"},
 			session: {},
 			route: true,
@@ -37,8 +37,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/svelte-to-do-app/_app/layout.svelte-2009011f.js"),
-						import("/svelte-to-do-app/_app/pages/components/to-do-list.svelte-7cb2aac9.js")
+					import("/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js"),
+						import("/svelte-to-do-app/_app/pages/components/to-do-list.svelte-f632d091.js")
 				],
 				params: {}
 			}
