chore: docs rebuild

--- a/docs/components/to-do-item.html
+++ b/docs/components/to-do-item.html
@@ -6,26 +6,26 @@
 		<link rel="icon" href="/svelte-to-do-app/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-a2106bc2.css">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-f8eab34f.js">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-6e28ff55.css">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-8b5e8ea3.js">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-663a98ee.js">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-26326ee4.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-026a2894.js">
 	</head>
 	<body>
 		
 
 
-<div class="item svelte-1fh10ap"><p class="svelte-1fh10ap">No title</p>
+<div class="item svelte-q6mmuj"><p class="svelte-q6mmuj">No title</p>
 
-	<button class="svelte-1fh10ap">✕</button>
+	<button class="svelte-q6mmuj">✕</button>
 </div>
 
 
-		<script type="module" data-hydrate="8uxqr2">
-		import { start } from "/svelte-to-do-app/_app/start-f8eab34f.js";
+		<script type="module" data-hydrate="1n0wbfd">
+		import { start } from "/svelte-to-do-app/_app/start-8b5e8ea3.js";
 		start({
-			target: document.querySelector('[data-hydrate="8uxqr2"]').parentNode,
+			target: document.querySelector('[data-hydrate="1n0wbfd"]').parentNode,
 			paths: {"base":"/svelte-to-do-app","assets":"/svelte-to-do-app"},
 			session: {},
 			route: true,
@@ -36,7 +36,7 @@
 				error: null,
 				nodes: [
 					import("/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js"),
-						import("/svelte-to-do-app/_app/pages/components/to-do-item.svelte-26326ee4.js")
+						import("/svelte-to-do-app/_app/pages/components/to-do-item.svelte-026a2894.js")
 				],
 				params: {}
 			}
