--- a/docs/components/to-do-list.html
+++ b/docs/components/to-do-list.html
@@ -6,28 +6,28 @@
 		<link rel="icon" href="/svelte-to-do-app/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-list.svelte-8d1a742a.css">
-	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-a2106bc2.css">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-f8eab34f.js">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-list.svelte-996e17e4.css">
+	<link rel="stylesheet" href="/svelte-to-do-app/_app/assets/pages/components/to-do-item.svelte-6e28ff55.css">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/start-8b5e8ea3.js">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/chunks/vendor-663a98ee.js">
 	<link rel="modulepreload" href="/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-list.svelte-f632d091.js">
-	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-26326ee4.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-list.svelte-ffaa84ea.js">
+	<link rel="modulepreload" href="/svelte-to-do-app/_app/pages/components/to-do-item.svelte-026a2894.js">
 	</head>
 	<body>
 		
 
 
-<div class="list svelte-1wc3g3s">
+<div class="list svelte-rsb551">
 
 	
 </div>
 
 
-		<script type="module" data-hydrate="pygb4j">
-		import { start } from "/svelte-to-do-app/_app/start-f8eab34f.js";
+		<script type="module" data-hydrate="81uy34">
+		import { start } from "/svelte-to-do-app/_app/start-8b5e8ea3.js";
 		start({
-			target: document.querySelector('[data-hydrate="pygb4j"]').parentNode,
+			target: document.querySelector('[data-hydrate="81uy34"]').parentNode,
 			paths: {"base":"/svelte-to-do-app","assets":"/svelte-to-do-app"},
 			session: {},
 			route: true,
@@ -38,7 +38,7 @@
 				error: null,
 				nodes: [
 					import("/svelte-to-do-app/_app/layout.svelte-9df4f3c1.js"),
-						import("/svelte-to-do-app/_app/pages/components/to-do-list.svelte-f632d091.js")
+						import("/svelte-to-do-app/_app/pages/components/to-do-list.svelte-ffaa84ea.js")
 				],
 				params: {}
 			}
