chore(common styles): color scheme changed

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--bg-primary-color: #3b3745;
-	--bg-secondary-color: #24222e;
+	--bg-primary-color: #ccc6dd;
+	--bg-secondary-color: #ffffff;
 
-	--text-primary-color: white;
-	--text-secondary-color: gray;
+	--text-primary-color: #3e3e3e;
+	--text-secondary-color: #a18bcb;
 }
 
 * {
